# latent-agent-team

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment.yml  prompt.md  pyproject.toml
.github/workflows/: ci.yml
configs/: gemma2_9b.yaml  llama32_3b.yaml  ministral3_8b.yaml  phi3.yaml
paper/: latent_agent_team.tex  neurips_2025.sty
scripts/: async_bench.py  download_data.sh  eval_finetuned.py  finetune_benchmarks.py  generate_teacher_traces.py  run_eval.sh  run_full_sft_pipeline.py  run_sft_training.py  run_train.sh
serve/: __init__.py  app.py  cache.py  schemas.py
src/latent_agent_team/: __init__.py  team.py
src/latent_agent_team/agents/: __init__.py  browser.py  memory.py  planner.py  retriever.py  verifier.py
src/latent_agent_team/benchmarks/: __init__.py  agentbench_wrapper.py  mind2web_wrapper.py  webshop_wrapper.py
src/latent_agent_team/models/: __init__.py  audit_decoder.py  backbone.py  latent_comm.py  role_adapter.py  router.py
src/latent_agent_team/train/: __init__.py  dpo_rollout.py  eval.py  sft_bootstrap.py
src/latent_agent_team/utils/: __init__.py  logger.py  metrics.py
