[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent_agent_team"
version = "0.1.0"
description = "Budgeted Latent Communication for Lightweight Multi-Agent Teams"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Latent Agent Team Authors"},
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
    "datasets>=2.18.0",
    "evaluate>=0.4.0",
    "faiss-cpu>=1.7.4",
    "vllm>=0.4.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "wandb>=0.16.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
    "jsonlines>=4.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.6.0",
    "sentencepiece>=0.2.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
lat-train = "latent_agent_team.train.sft_bootstrap:main"
lat-dpo = "latent_agent_team.train.dpo_rollout:main"
lat-eval = "latent_agent_team.train.eval:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
